fix spacing

--- a/src/sass/_lists.scss
+++ b/src/sass/_lists.scss
@@ -18,6 +18,7 @@
         list-style: none;
         &.mat-list-base {
             display: flex;
+            margin: 2rem;
         }
     }
     &__item {
